[package]
authors = [""]
edition = "2018"
readme = "README.md"
name = "f469"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
stm32f4xx-hal = { version = "0.6.0", features = ["stm32f469"]}
nb = "0.1.2"
embedded-hal = "0.2.3"
bitcoin_hashes = { version = "0.7.3", default-features = false }
# secp256k1 = { version = "0.17.2", default-features = false, features = ['lowmemory'] }
# my fork for now
secp256k1 = { path="./rust-secp256k1", default-features = false, features = ['lowmemory'] }

# this lets you use `cargo fix`!
[[bin]]
name = "f469"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations